--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "jeletro",
   "private": true,
   "dependencies": {
-    "jquery": "~1.11.0"
+    "jquery": "~1.11.0",
+    "normalize-css": "~3.0.1"
   },
   "devDependencies": {}
 }
